# advanced_RAG

./: RAG_HandsOn_Script.ipynb  command_history.txt  pyproject.toml  requirements.txt
